@@ -11,6 +11,8 @@ New Features:
 
 Bugfixes:
 - pause near end of buffered streams works as expected (Jira APPSERVER-199)
+- fixed potential memory leak with RTMPT connections that are not properly
+  closed (Jira APPSERVER-193)
 
 
 Red5 0.6.3  (2007-09-17)
